--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.14",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^4.0.2"
     },
     "dependencies": {
         "vue-router": "^3.5.4"
